--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,6 +4,7 @@ aux_source_directory(./thread/ BASE_FILES)
 aux_source_directory(./threadpool/ BASE_FILES)
 aux_source_directory(./timer/ BASE_FILES)
 aux_source_directory(./yqueue/ BASE_FILES)
+aux_source_directory(./single/ BASE_FILES)
 
 add_library(core SHARED ${BASE_FILES})
 
