--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,9 @@ cmake_minimum_required(VERSION 3.2)
 
 project(Base)
 
+set(CMAKE_BUILD_TYPE "Release")
+set(CMAKE_CXX_FLAGS  "-std=c++11 -s")
+
 include_directories(src)
 
 add_subdirectory(src/)
