--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,8 +2,7 @@ cmake_minimum_required(VERSION 3.2)
 
 project(Base)
 
-set(CMAKE_BUILD_TYPE "Debug")
-set(CMAKE_CXX_FLAGS  "-std=c++11 -g")
+set(CMAKE_CXX_FLAGS  "-std=c++11 -s")
 add_compile_options(-W)
 
 include_directories(src)
