--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -6,8 +6,8 @@ aux_source_directory(./timer/ TIMER_FILES)
 add_executable(threadpool ${THREADPOOL_FILES})
 add_executable(timer ${TIMER_FILES})
 
-target_link_libraries(threadpool core)
-target_link_libraries(timer core)
+target_link_libraries(threadpool lmcbase)
+target_link_libraries(timer lmcbase)
 
 install(DIRECTORY ${PROJECT_BINARY_DIR}/test/threadpool DESTINATION ${PROJECT_BINARY_DIR}/bin/)
 install(DIRECTORY ${PROJECT_BINARY_DIR}/test/timer DESTINATION ${PROJECT_BINARY_DIR}/bin/)
