--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,13 @@
 cmake_minimum_required(VERSION 3.2)
 
-project(lmcbase)
+project(lmcbase VERSION 1.0.0)
 
 add_compile_options(-W)
 
 include_directories(src)
+include_directories(${CMAKE_INCLUDE_PATH})
 
 add_subdirectory(src/)
 add_subdirectory(demo/)
+
+configure_file(version.h.in version.h @ONLY)
