将cmdline部门模板功能移出来

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -26,3 +26,5 @@ install(FILES timer/ltimer.h DESTINATION
               ${PROJECT_BINARY_DIR}/install/include/timer/)
 install(FILES cmdline/cmdline.h DESTINATION 
               ${PROJECT_BINARY_DIR}/install/include/cmdline/)
+install(FILES type/type.h DESTINATION 
+              ${PROJECT_BINARY_DIR}/install/include/type/)
