--- a/demo/CMakeLists.txt
+++ b/demo/CMakeLists.txt
@@ -12,15 +12,9 @@ target_link_libraries(threadpool lmcbase)
 target_link_libraries(timer lmcbase)
 target_link_libraries(cmdline lmcbase)
 
-install(DIRECTORY ${CMAKE_SOURCE_DIR}/demo/threadpool DESTINATION 
-                  ${PROJECT_BINARY_DIR}/install/demo/)
-install(DIRECTORY ${CMAKE_SOURCE_DIR}/demo/timer DESTINATION 
-                  ${PROJECT_BINARY_DIR}/install/demo/)
-install(DIRECTORY ${CMAKE_SOURCE_DIR}/demo/cmdline DESTINATION 
-                  ${PROJECT_BINARY_DIR}/install/demo/)
-install(DIRECTORY ${PROJECT_BINARY_DIR}/demo/threadpool DESTINATION 
-                  ${PROJECT_BINARY_DIR}/install/demo/threadpool/)
-install(DIRECTORY ${PROJECT_BINARY_DIR}/demo/timer DESTINATION 
-                  ${PROJECT_BINARY_DIR}/install/demo/timer/)
-install(DIRECTORY ${PROJECT_BINARY_DIR}/demo/cmdline DESTINATION 
-                  ${PROJECT_BINARY_DIR}/install/demo/cmdline/)
+install(FILES ${PROJECT_BINARY_DIR}/demo/threadpool PERMISSIONS OWNER_EXECUTE
+              DESTINATION ${PROJECT_BINARY_DIR}/install/demo/threadpool/)
+install(FILES ${PROJECT_BINARY_DIR}/demo/timer PERMISSIONS OWNER_EXECUTE
+              DESTINATION ${PROJECT_BINARY_DIR}/install/demo/timer/)
+install(FILES ${PROJECT_BINARY_DIR}/demo/cmdline PERMISSIONS OWNER_EXECUTE
+              DESTINATION ${PROJECT_BINARY_DIR}/install/demo/cmdline/)
