--- a/demo/CMakeLists.txt
+++ b/demo/CMakeLists.txt
@@ -12,9 +12,14 @@ target_link_libraries(threadpool lmcbase)
 target_link_libraries(timer lmcbase)
 target_link_libraries(cmdline lmcbase)
 
-install(FILES ${PROJECT_BINARY_DIR}/demo/threadpool PERMISSIONS OWNER_EXECUTE
-              DESTINATION ${PROJECT_BINARY_DIR}/install/demo/threadpool/)
-install(FILES ${PROJECT_BINARY_DIR}/demo/timer PERMISSIONS OWNER_EXECUTE
-              DESTINATION ${PROJECT_BINARY_DIR}/install/demo/timer/)
-install(FILES ${PROJECT_BINARY_DIR}/demo/cmdline PERMISSIONS OWNER_EXECUTE
-              DESTINATION ${PROJECT_BINARY_DIR}/install/demo/cmdline/)
+install(FILES ${PROJECT_BINARY_DIR}/demo/threadpool PERMISSIONS OWNER_EXECUTE 
+              OWNER_READ OWNER_WRITE GROUP_READ GROUP_WRITE WORLD_READ 
+              WORLD_WRITE DESTINATION 
+              ${PROJECT_BINARY_DIR}/install/demo/threadpool/)
+install(FILES ${PROJECT_BINARY_DIR}/demo/timer PERMISSIONS OWNER_EXECUTE 
+              OWNER_READ OWNER_WRITE GROUP_READ GROUP_WRITE WORLD_READ 
+              WORLD_WRITE DESTINATION ${PROJECT_BINARY_DIR}/install/demo/timer/)
+install(FILES ${PROJECT_BINARY_DIR}/demo/cmdline PERMISSIONS OWNER_EXECUTE 
+              OWNER_READ OWNER_WRITE GROUP_READ GROUP_WRITE WORLD_READ 
+              WORLD_WRITE DESTINATION 
+              ${PROJECT_BINARY_DIR}/install/demo/cmdline/)
