--- a/demo/CMakeLists.txt
+++ b/demo/CMakeLists.txt
@@ -1,12 +1,8 @@
 cmake_minimum_required(VERSION 3.2)
 
-aux_source_directory(./threadpool/ THREADPOOL_FILES)
-aux_source_directory(./timer/ TIMER_FILES)
-aux_source_directory(./cmdline/ CMDLINE_FILES)
-
-add_executable(threadpool ${THREADPOOL_FILES})
-add_executable(timer ${TIMER_FILES})
-add_executable(cmdline ${CMDLINE_FILES})
+add_executable(threadpool ./threadpool.cpp)
+add_executable(timer ./timer.cpp)
+add_executable(cmdline ./cmdline.cpp)
 
 target_link_libraries(threadpool lmcbase)
 target_link_libraries(timer lmcbase)
@@ -15,11 +11,11 @@ target_link_libraries(cmdline lmcbase)
 install(FILES ${PROJECT_BINARY_DIR}/demo/threadpool PERMISSIONS OWNER_EXECUTE 
               OWNER_READ OWNER_WRITE GROUP_READ GROUP_WRITE WORLD_READ 
               WORLD_WRITE DESTINATION 
-              ${PROJECT_BINARY_DIR}/install/demo/threadpool/)
+              ${PROJECT_BINARY_DIR}/install/demo/)
 install(FILES ${PROJECT_BINARY_DIR}/demo/timer PERMISSIONS OWNER_EXECUTE 
               OWNER_READ OWNER_WRITE GROUP_READ GROUP_WRITE WORLD_READ 
-              WORLD_WRITE DESTINATION ${PROJECT_BINARY_DIR}/install/demo/timer/)
+              WORLD_WRITE DESTINATION ${PROJECT_BINARY_DIR}/install/demo/)
 install(FILES ${PROJECT_BINARY_DIR}/demo/cmdline PERMISSIONS OWNER_EXECUTE 
               OWNER_READ OWNER_WRITE GROUP_READ GROUP_WRITE WORLD_READ 
               WORLD_WRITE DESTINATION 
-              ${PROJECT_BINARY_DIR}/install/demo/cmdline/)
+              ${PROJECT_BINARY_DIR}/install/demo/)
