update:消灭编译警告

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,12 @@ project(lmcbase VERSION 1.2.11)
 
 add_compile_options(-W)
 
+set(CMAKE_CXX_FLAGS "-Wall -Wextra -Wconversion -Wsign-conversion   \
+                     -Wshadow -Wnull-dereference -fsanitize=address \
+                     -fsanitize=undefined")
+
+
+
 include_directories(src)
 include_directories(${CMAKE_INCLUDE_PATH})
 
