--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,8 +5,7 @@ project(lmcbase VERSION 1.2.11)
 add_compile_options(-W)
 
 set(CMAKE_CXX_FLAGS "-Wall -Wextra -Wconversion -Wsign-conversion   \
-                     -Wshadow -Wnull-dereference -fsanitize=address \
-                     -fsanitize=undefined")
+                     -Wshadow -Wnull-dereference -fsanitize=undefined")
 
 
 
