--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(lmcbase VERSION 1.2.11)
 
 add_compile_options(-W)
 
-set(CMAKE_CXX_FLAGS "-Wall -Wextra -Wconversion -Wsign-conversion   \
+set(CMAKE_CXX_FLAGS "-std=c++14 -Wall -Wextra -Wconversion -Wsign-conversion\
                      -Wshadow -Wnull-dereference -fsanitize=undefined")
 
 
