自由控制编译动态库或者静态库

--- a/demo/CMakeLists.txt
+++ b/demo/CMakeLists.txt
@@ -8,6 +8,7 @@ target_link_libraries(threadpool lmcbase)
 target_link_libraries(timer lmcbase)
 target_link_libraries(cmdline lmcbase)
 
+if(IS_INSTALL)
 install(FILES ${PROJECT_BINARY_DIR}/demo/threadpool PERMISSIONS OWNER_EXECUTE 
               OWNER_READ OWNER_WRITE GROUP_READ GROUP_WRITE WORLD_READ 
               WORLD_WRITE DESTINATION 
@@ -19,3 +20,4 @@ install(FILES ${PROJECT_BINARY_DIR}/demo/cmdline PERMISSIONS OWNER_EXECUTE
               OWNER_READ OWNER_WRITE GROUP_READ GROUP_WRITE WORLD_READ 
               WORLD_WRITE DESTINATION 
               ${PROJECT_BINARY_DIR}/install/demo/)
+endif()
